# bytecradle-6502-operating-system

./: README.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
docs/: userland-fs-api.md
emulator/: .gitignore  README.md
emulator/script/: create_sd.sh
emulator/src/: CMakeLists.txt  acia.cpp  acia.h  bytecradleboard.cpp  bytecradleboard.h  bytecradlemini.cpp  bytecradlemini.h  bytecradletiny.cpp  bytecradletiny.h  crc16.c  crc16.h  debug.h  main.c  main.cpp  ramrom.c  ramrom.h  screen.c  screen.h  sdcardbasic.cpp  sdcardbasic.h  sdcarddevice.cpp  sdcarddevice.h  terminal.cpp  terminal.h  via.cpp  via.h
emulator/src/tests/: test_acia_via.cpp  test_processor.cpp  test_sdcardbasic.cpp
emulator/src/vrEmu6502/: README.md  vrEmu6502.c  vrEmu6502.h
programs/: .gitignore  Makefile
programs/acia/: Makefile  acia.asm  rom.cfg
programs/argtest/: Makefile  callmain.s  crt0.s  main.c  main.s
programs/common/: callmain.c  crt0.s  patch_com_header.py  prog.cfg
programs/diag/: Makefile  main.c  main.s
programs/fibonacci/: Makefile  crt0.s  interrupt.s  io.h  main.c  main.map  main.s  prog.cfg  prog.lib  sbc.lib  uart.s  vectors.s
programs/fstest/: Makefile  io.h  main.c  main.s
programs/hello-c/: Makefile  io.h  main.c  main.s
programs/helloworld/: Makefile  helloworld.asm  rom.cfg
programs/mandelbrot/: Makefile  io.h  main.c  main.s  prog.cfg
programs/monitor/: .gitignore  Makefile  assemble.inc  assembler.s  constants.inc  disassemble.inc  disassemble.s  functions.inc  generate_monitor_jumptable.py  init.s  io.s  isr.s  jumptable.s  mnemonics.inc  monitor.asm  monitor.s  optcodes.inc  optcodes.s  rom.cfg  sdcard.inc  sdcard.s  uart.s  vectors.s
programs/os/: Makefile  constants.inc  crt0.s  functions.inc  init.s  io.h  io.s  main.c  main.s  sbc.cfg  sbc.lib  sdcard.c  sdcard.h  sdcard.s  sdcmds.s
programs/via-clock/: Makefile  rom.cfg  via-clock.asm
scripts/: inspect_bcos_size.py
src/: Makefile  README.md  command.c  command.h  crt0.s  functions.inc  generate_bcos_artifacts.py  init.s  io.h  io.s  isr.s  main.c  version.c  version.h
src/bcos/: Makefile  command.c  command.h  constants.h  constants.inc  crc16.c  crc16.h  crc16sd.s  crt0.s  fat32.c  fat32.h  functions.inc  init.s  io.h  io.s  isr.s  jumptable.s  main.c  ram.h  ram.s  ramtest.c  run.sh  sbc.cfg  sdcard.c  sdcard.h  sdcmds.s
src/bootstraprom/: Makefile  io.s  main.s  rom.cfg
src/environments/minirom/: microchess.s  monitor.s  rom.cfg  sieve.s
src/environments/tinyrom/: .gitignore  blinkenlights.s  constants.inc  main.s  numbertest.s
src/firmware/bootstrap/: constants.inc  functions.inc  main.s  vectors.s
src/fs/: README.md  crc16sd.s  fat32.c  fat32.h  fat32_alloc.c  fat32_core.c  fat32_create.c  fat32_internal.h  fat32_ops.c  fat32_ui.c  fat32_write.c  sdcard.c  sdcard.h  sdcmds.s  syscall_stack.s  syscall_stubs.s
src/minimalistic/: main.s  rom.cfg
src/minirom/: Makefile  banktest.s  constants.inc  io.s  jumptable.s  main.s  memtest.s  mnemonics.s  sdcmd.s
src/os/bcos/: .gitignore  Makefile  README.md  abi.s  command.h  crt0.s  functions.inc  generate_bcos_artifacts.py  init.s  jumptable.s  ramtest.h  sbc.cfg  vectors.s
src/sbctestrom/: Makefile  assembler.s  constants.inc  disassemble.s  isr.s  main.s  memtest.s  sdcmd.s
src/tinyrom/: .gitignore  Makefile  ansitest.s  ascii.s  blinkenlights.s  constants.inc  functions.inc  io.s  jumptable.s  main.s  menu.s  monitor.s  pispigot.s  rom.cfg  sdcmd.s  tests.s  vectors.s  via.s
tests/: .gitignore  README.md
tests/e2e/: conftest.py  harness.py  test_argtest.py  test_basic.py  test_create_entries.py  test_diag.py  test_dir_commands.py  test_fibonacci.py  test_fstest.py  test_hello_world.py  test_hexdump.py  test_more.py  test_version.py
